--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
-* add to github!
+DONE * add to github!
 DONE * fix last seen timestamp to date mapping
 * store all recorded positions in database
 * draw ship track on click - pull data from db
 * custom icons for various aton types
-* wrap in bootstrap
-* add table with data from json
+DONE * wrap in bootstrap
+DONE * add table with data from json
 * better quality of ship icon
 * investigate plotting range
 * add receiver location marker (from config?)
