udp-server.py - verbose logging, TODO updated

--- a/TODO
+++ b/TODO
@@ -11,3 +11,4 @@ DONE * add table with data from json
 * add client location marker (use browser locations?)
 * attempt to decode multi-sentence messages
 * check how unusable it becomes with lots more data/frequency
+* rewrite udp-server.py as proper daemon & implement proper logging & debugging
