--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 DONE * add to github!
 DONE * fix last seen timestamp to date mapping
-* store all recorded positions in database
+DONE * store all recorded positions in database
 * draw ship track on click - pull data from db
 * custom icons for various aton types
 DONE * wrap in bootstrap
@@ -12,3 +12,4 @@ DONE * add table with data from json
 DONE * attempt to decode multi-sentence messages
 * check how unusable it becomes with lots more data/frequency
 * rewrite udp-server.py as proper daemon & implement proper logging & debugging
+DONE * handle type 5 messages and cache vessels details in sql
